Fixed missed gap difference on tablet-portrait and mobile screen sizes for Contact

--- a/css/contact.css
+++ b/css/contact.css
@@ -35,3 +35,16 @@
     content: url("../assets/images/phone-alt.svg");
 }
 
+/* Tablet Vertical */
+@media (min-width: 768px) and (max-width: 1023px) and (orientation: portrait) {
+    .contact-content-wrapper {
+        gap: 24px;
+    }
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+    .contact-content-wrapper {
+        gap: 24px;
+    }
+}
